--- a/feature-home-ui/src/main/res/values/strings.xml
+++ b/feature-home-ui/src/main/res/values/strings.xml
@@ -11,5 +11,5 @@
     <string name="ErrorText">Упс! Что-то пошло не так, попробуйте снова</string>
     <string name="EnterFilter">Введите фильтр</string>
     <string name="Add">Добавить</string>
-    <string name="FilterDescription">В фильтр Вы можете добавить как заголовок уведомления, так и его содержимое. Например, если вы хотите поставить будильник на получение сообщения от конкретного человека, Вам необходимо указать, как он записан в приложении.</string>
+    <string name="FilterDescription">Добавьте заголовок и содержимое уведомления. Укажите имя пользователя из нужного Вам приложения.</string>
 </resources>
