--- a/core-ui/src/main/res/values/strings.xml
+++ b/core-ui/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Push Alert</string>
-    <string name="app_name_version">Push Alert %1$s</string>
+    <string name="app_name">Push Alerts</string>
+    <string name="app_name_version">Push Alerts %1$s</string>
     <string name="play_market_url">https://www.youtube.com/</string>
     <string name="play_market">Play Market</string>
     <string name="email" translatable="false">booleanull@gmail.com</string>
