--- a/feature-home-ui/src/main/res/values/strings.xml
+++ b/feature-home-ui/src/main/res/values/strings.xml
@@ -14,18 +14,9 @@
     <string name="filter">Фильтрация</string>
     <string name="search">Поиск</string>
     <string name="settings">Настройки</string>
-    <!-- Preference Titles -->
-    <string name="messages_header">Messages</string>
-    <string name="sync_header">Sync</string>
-
-    <!-- Messages Preferences -->
-    <string name="signature_title">Your signature</string>
-    <string name="reply_title">Default reply action</string>
-
-    <!-- Sync Preferences -->
-    <string name="sync_title">Sync email periodically</string>
-    <string name="attachment_title">Download incoming attachments</string>
-    <string name="attachment_summary_on">Automatically download attachments for incoming emails
-    </string>
-    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="info">Информация</string>
+    <string name="app">Приложение</string>
+    <string name="clear">Очистить</string>
+    <string name="dark_mode">Темная тема</string>
+    <string name="alarm_clear">Будильники были очищены</string>
 </resources>
