--- a/feature-home-ui/src/main/res/values/strings.xml
+++ b/feature-home-ui/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="clear">Очистить</string>
     <string name="dark_mode">Темная тема</string>
     <string name="alarm_clear">Будильники были очищены</string>
+    <string name="disable_all">Отключить все</string>
 </resources>
