--- a/feature-home-ui/src/main/res/values/strings.xml
+++ b/feature-home-ui/src/main/res/values/strings.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="application_not_found">Приложения не найдены</string>
-    <string name="turn_on_alarm">Включить будильник</string>
-    <string name="turn_on_filter">Включить фильтрацию</string>
-    <string name="main_section">Основное</string>
-    <string name="optional_section">Дополнительное</string>
-    <string name="add_new_filter">Добавление нового фильтра</string>
-    <string name="remove_filter">Фильтр \"%1$s\" был удален</string>
-    <string name="simple_error_text">Упс! Что-то пошло не так, попробуйте снова</string>
-    <string name="enter_filter">Введите фильтр</string>
-    <string name="add">Добавить</string>
-    <string name="filter_description">Добавьте заголовок или содержимое уведомления.\nНапример: Имя пользователя.</string>
-    <string name="filter">Фильтрация</string>
-    <string name="search">Поиск</string>
-    <string name="settings">Настройки</string>
-    <string name="info">Информация</string>
-    <string name="app">Приложение</string>
-    <string name="clear">Очистить</string>
-    <string name="dark_mode">Темная тема</string>
-    <string name="alarm_clear">Будильники были очищены</string>
-    <string name="disable_all">Отключить все</string>
+    <string name="application_not_found">Applications not found</string>
+    <string name="turn_on_alarm">Turn on the alarm</string>
+    <string name="turn_on_filter">Enable filtering</string>
+    <string name="main_section">Main</string>
+    <string name="optional_section">Additional</string>
+    <string name="add_new_filter">Adding a new filter</string>
+    <string name="remove_filter">The filter \"%1$s\" was removed</string>
+    <string name="simple_error_text">Oops! Something went wrong, try again</string>
+    <string name="enter_filter">Enter a filter</string>
+    <string name="add">Add</string>
+    <string name="filter_description">Add the title or content of the notification.\nFor example: user name.</string>
+    <string name="filter">Filtration</string>
+    <string name="search">Search</string>
+    <string name="settings">Settings</string>
+    <string name="info">Info</string>
+    <string name="app">Application</string>
+    <string name="clear">Clear</string>
+    <string name="dark_mode">Dark theme</string>
+    <string name="alarm_clear">The alarm clocks were cleared</string>
+    <string name="disable_all">Disable all</string>
 </resources>
