--- a/feature-onboarding-ui/src/main/res/values-ru/strings.xml
+++ b/feature-onboarding-ui/src/main/res/values-ru/strings.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="next">Продолжить</string>
-    <string name="take_permission">Разрешить</string>
     <string name="onboarding_description_first">Сервис для "громких" уведомлений.\nЗаводите будильник на получение Push-сообщений от приложений.</string>
     <string name="onboarding_title_second">Откройте доступ сервису</string>
     <string name="onboarding_description_second">Для работы сервиса необходимо предоставить возможность реагировать на Ваши Push-сообщения.\n\nВозможные проблемы.</string>
+    <string name="take_permission">Разрешить</string>
+    <string name="permission_autostart">Доступ к автостарту</string>
+    <string name="permission_alert">Доступ к пробуждению</string>
+    <string name="permission_notification">Доступ к уведомлениям</string>
 </resources>
