--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="notification_permission">You did not grant access to notifications</string>
-    <string name="alert_permission">You did not grant access to the notification to you</string>
+    <string name="permission_notification_error">You did not grant access to notifications</string>
+    <string name="permission_alert_error">You did not grant access to the notification to you</string>
 </resources>
