--- a/core-ui/src/main/res/values/strings.xml
+++ b/core-ui/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="play_market" translatable="false">Play Market</string>
     <string name="email" translatable="false">booleanull@gmail.com</string>
     <string name="choose_email_send">Select the method of sending</string>
-    <string name="problem_service">Possible problem</string>
+    <string name="problem_service">Possible problems</string>
     <string name="problem_service_description">The service may require certain system permissions that are required for a specific device to work correctly. If you work with a service You have not processed the notification, please email us at booleanull@gmail.com.</string>
     <string name="mark_app">Rate our app</string>
     <string name="mark_app_playmarket">Rate our apps in the Play Market.</string>
