--- a/core-ui/src/main/res/values/strings.xml
+++ b/core-ui/src/main/res/values/strings.xml
@@ -2,14 +2,16 @@
     <string name="app_name">Push Alerts</string>
     <string name="play_market_url" translatable="false">https://play.google.com/store/apps/details?id=org.booleanull.pushalerts</string>
     <string name="play_market" translatable="false">Play Market</string>
+    <string name="privacy_policy_url" translatable="false">https://booleanull.github.io</string>
     <string name="email" translatable="false">booleanull@gmail.com</string>
     <string name="choose_email_send">Select the method of sending</string>
     <string name="problem_service">Possible problems</string>
     <string name="problem_service_description">The service may require certain system permissions that are required for a specific device to work correctly. If you work with a service You have not processed the notification, please email us at booleanull@gmail.com.</string>
     <string name="mark_app">Rate our app</string>
-    <string name="mark_app_playmarket">Rate our apps in the Play Market.</string>
+    <string name="mark_app_playmarket">Rate our apps in the Play Market.\nPrivacy Policy.</string>
     <string name="take_permission">Allow access</string>
     <string name="permission_autostart">Access to auto start</string>
     <string name="permission_alert">Access to wake up</string>
     <string name="permission_notification">Access to notifications</string>
+    <string name="privacy_policy">Privacy Policy</string>
 </resources>
