--- a/feature-home-ui/src/main/res/values/strings.xml
+++ b/feature-home-ui/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="add_filter">Add filter</string>
     <string name="added_to_favorites">Added to favorites</string>
     <string name="removed_from_favorites">Removed from favorites</string>
+    <string name="attention_alarm">Внимание! В настройках отключены все оповещения.</string>
 </resources>
