--- a/feature-home-ui/src/main/res/values-ru/strings.xml
+++ b/feature-home-ui/src/main/res/values-ru/strings.xml
@@ -24,4 +24,6 @@
     <string name="add_filter">Добавить фильтр</string>
     <string name="added_to_favorites">Добавлено в избранное</string>
     <string name="removed_from_favorites">Удалено из избранного</string>
+    <string name="attention_alarm">Внимание! В настройках отключены все оповещения.</string>
+    <string name="clear_dialog_message">Вы уверены, что хотите очистить все данные?</string>
 </resources>
