--- a/feature-home-ui/src/main/res/values/strings.xml
+++ b/feature-home-ui/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="removed_from_favorites">Removed from favorites</string>
     <string name="attention_alarm">Attention! All notifications are disabled in the settings.</string>
     <string name="clear_dialog_message">Are you sure you want to clear all data?</string>
+    <string name="notification_count">Notifications: %1$d</string>
 </resources>
