Fix bugs and fix onboarding

--- a/core-ui/src/main/res/values-ru/strings.xml
+++ b/core-ui/src/main/res/values-ru/strings.xml
@@ -5,7 +5,7 @@
     <string name="problem_service">Возможные проблемы</string>
     <string name="problem_service_description">Сервису для корректной работы может требоваться наличие некоторых системных разрешений, необходимых для конкретного девайса. Если при работе с сервисом у Вас не обратываются уведомления, напишите нам на почту booleanull@gmail.com.</string>
     <string name="mark_app">Оцените наше приложение</string>
-    <string name="mark_app_playmarket">Оцените наше приложения в Play Market.\nПолитика конфиденциальности.</string>
+    <string name="mark_app_playmarket">Оцените наше приложения в Play Market.\n\nПолитика конфиденциальности.</string>
     <string name="take_permission">Разрешить</string>
     <string name="permission_autostart">Доступ к автостарту</string>
     <string name="permission_alert">Доступ к пробуждению</string>
