--- a/feature-home-ui/src/main/res/values-ru/strings.xml
+++ b/feature-home-ui/src/main/res/values-ru/strings.xml
@@ -27,4 +27,5 @@
     <string name="attention_alarm">Внимание! В настройках отключены все оповещения.</string>
     <string name="clear_dialog_message">Вы уверены, что хотите очистить все данные?</string>
     <string name="notification_count">Уведомлений: %1$d</string>
+    <string name="filter_remove_message">Смахните фильтр вправо, чтобы удалить</string>
 </resources>
